style.css
* {
    box-sizing: border-box;
}

body {

    margin: 0 auto;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    background: #f7f5f0;
}


.main-nav {
    width: 100%;
    background-color: black;
    min-height: 35px;
    padding-top: 1px;


}

nav ul {
    display: flex;

    list-style: none;

    justify-content: space-around;
    padding: 10px;
    margin: 0 auto;

}

nav .name {
    display: block;
    margin-right: auto;
}

nav li {
    color: white;
    padding: 5px 10px 10px 10px;


}

img {
    width: 100%;
    height: 40%;
}


main {
    display: block;
    margin-top: 40px;
    margin-bottom: 50px
}

.card {
    width: 90%;
    background-color: white;
    border-radius: 6px;
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 30px;
    padding-bottom: 70px;
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 40px;
    margin-bottom: 40px;
    border-bottom: 4px solid #ccc;

}

.card:hover {
    border-bottom: 4px solid aquamarine;
}

.hid {
    word-wrap: break-word;
}

.skill {
    display: flex;
    list-style: none;
    text-align: center;

}

.skill li {
    border-radius: 5px;
    margin: 5px;
    padding: 5px;
}

.skill li:nth-child(odd) {
    background-color: #FC766AFF;

}

.skill li:nth-child(even) {
    background-color: #B0B8B4FF;
}

footer {
    text-align: center;
}

footer ul {

    list-style: none;
    margin: 0;
    padding: 0;

}

footer ul li {
    display: inline-block;
}

a.social {
    display: inline-block;
    text-indent: -9999px;
    margin-left: 5px;
    width: 30px;
    height: 30px;
    background-size: 30px 30px;
    opacity: .4;
    transition: all .5s;
}

a.twitter {
    background-image: url(images/twitter.svg);

}

a.linkdIn {
    background-image: url(images/linkedin.svg);

}

a.github {
    background-image: url(images/github.svg);
}

a.social:hover {
    opacity: 1;
}

.clearfix {
    clear: both;
}

